manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nodeapi
  labels:
    name: nodeapi
